@@ -14,10 +14,10 @@ index c972b3bc0b..18b5a6ee4f 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 648471fdf9..635bb78f3d 100644
+index 50d298f97e..457a10b1cb 100644
 --- a/Changes
 +++ b/Changes
-@@ -412,6 +412,10 @@ Working version
+@@ -415,6 +415,10 @@ Working version
    temporary assembly file is no longer left in the file system.
    (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)
  
@@ -28,7 +28,7 @@ index 648471fdf9..635bb78f3d 100644
  OCaml 5.0
  ---------
  
-@@ -942,11 +946,6 @@ OCaml 5.0
+@@ -945,11 +949,6 @@ OCaml 5.0
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -40,7 +40,7 @@ index 648471fdf9..635bb78f3d 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -975,6 +974,30 @@ OCaml 5.0
+@@ -978,6 +977,30 @@ OCaml 5.0
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -71,7 +71,7 @@ index 648471fdf9..635bb78f3d 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1010,13 +1033,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1013,13 +1036,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -87,7 +87,7 @@ index 648471fdf9..635bb78f3d 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1123,6 +1146,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1126,6 +1149,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -97,7 +97,7 @@ index 648471fdf9..635bb78f3d 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1382,6 +1408,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1385,6 +1411,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10101,7 +10101,7 @@ index 0000000000..839446eb08
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..92f1690aeb
+index 0000000000..96f6ce0cb0
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10020 @@
@@ -10121,10 +10121,10 @@ index 0000000000..92f1690aeb
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 648471fdf9..635bb78f3d 100644
++index 50d298f97e..457a10b1cb 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -412,6 +412,10 @@ Working version
++@@ -415,6 +415,10 @@ Working version
 +   temporary assembly file is no longer left in the file system.
 +   (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)
 + 
@@ -10135,7 +10135,7 @@ index 0000000000..92f1690aeb
 + OCaml 5.0
 + ---------
 + 
-+@@ -942,11 +946,6 @@ OCaml 5.0
++@@ -945,11 +949,6 @@ OCaml 5.0
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10147,7 +10147,7 @@ index 0000000000..92f1690aeb
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -975,6 +974,30 @@ OCaml 5.0
++@@ -978,6 +977,30 @@ OCaml 5.0
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10178,7 +10178,7 @@ index 0000000000..92f1690aeb
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1010,13 +1033,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1013,13 +1036,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10194,7 +10194,7 @@ index 0000000000..92f1690aeb
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1123,6 +1146,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1126,6 +1149,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10204,7 +10204,7 @@ index 0000000000..92f1690aeb
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1382,6 +1408,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1385,6 +1411,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
